# pattern-visitor

./: Cargo.toml  README.md  rustfmt.toml
src/: lib.rs  main.rs
src/visitor_0/: circle_element.rs  element.rs  generic_element.rs  half_value_visitor.rs  item.rs  mod.rs  scale_visitor.rs  square_element.rs  value_item.rs  visitor.rs  visitor_acceptor.rs  visitor_element.rs
src/visitor_0/element/: circle_element.rs  mod.rs  point_element.rs  square_element.rs
src/visitor_0/visitor/: mod.rs  scale_visitor.rs
src/visitor_1/: circle_element.rs  element.rs  generic_element.rs  mod.rs  scale_visitor.rs  square_element.rs  visitor_element.rs
src/visitor_1/element/: circle_element.rs  mod.rs  point_element.rs  square_element.rs
src/visitor_1/visitor/: mod.rs  scale_visitor.rs  visitor_acceptor.rs  visitor_element.rs
src/visitor_2/: circle_element.rs  mod.rs  scale_visitor.rs  square_element.rs  visitor.rs
src/visitor_2/extension/: mod.rs
src/visitor_2/original/: mod.rs
src/visitor_2/supplemented/: mod.rs
src/visitor_3/: cluster_element.rs  mod.rs  value_element.rs
src/visitor_3/element/: circle_element.rs  hexagon_element.rs  mod.rs  square_element.rs
src/visitor_3/mixin/: mod.rs  scale_element.rs
src/visitor_3/visitor/: cluster_visitor.rs  mod.rs  scale_visitor.rs  visitor_acceptor.rs  visitor_element.rs
src/visitor_4/: mod.rs
src/visitor_4/element/: mod.rs  square_element.rs
src/visitor_4/visitor/: cluster_visitor.rs  mod.rs
src/visitor_5/: mod.rs
src/visitor_5/element/: circle_element.rs  mod.rs  point_element.rs
src/visitor_6/: mod.rs
(+30 files in other folders)
