[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
description = "Example Rust source code demonstrating the pattern \"Visitor\""
edition = "2024"
homepage = "https://www.CroftSoft.com/"
license = "MIT"
name = "pattern-visitor"
publish = false
readme = "README.md"
repository = "https://github.com/david-wallace-croft/pattern-visitor"
rust-version = "1.85.0"
version = "0.0.0-SNAPSHOT"

[dependencies]
# none
